# native.dart

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: publish.yml
example/: Makefile  README.md  ffigen.yaml  pubspec.yaml
example/android/app/: build.gradle
example/assets/emscripten/: WasmFfi.js
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: example.dart  main.dart  wasmffi_bindings.dart
example/linux/: CMakeLists.txt
example/macos/Runner.xcodeproj/: project.pbxproj
example/src/: CMakeLists.txt  native.c
example/windows/runner/: Runner.rc
example_dart/: analysis_options.yaml  lib  pubspec.yaml
example_dart/web/: assets  main.dart
example_flutter/lib/: example.dart
lib/: app_type.dart  ffi.dart  ffi_utils.dart  ffi_wrapper.dart
lib/src/_dart_ffi/: app_type.dart  helper.dart
tool/: bump_version.dart
tools/: update-version.sh
universal_ffi/: CHANGELOG.md  README.md  pubspec.yaml
universal_ffi/example/: Makefile  pubspec.yaml
universal_ffi/example_ffi_plugin/: .metadata  Makefile  ffigen.yaml  pubspec.yaml
universal_ffi/example_ffi_plugin/src/: CMakeLists.txt  example_ffi_plugin.c  example_ffi_plugin.h
universal_ffi/example_flutter/: pubspec.yaml
universal_ffi/lib/: ffi.dart  ffi_helper.dart  ffi_utils.dart
wasm_ffi/: .gitignore  CHANGELOG.md  Makefile  README.md  pubspec.yaml  return_types.md
wasm_ffi/example/: Makefile  ffigen.yaml
wasm_ffi/example_flutter/: pubspec.yaml
wasm_ffi/test/: type_utils_test.dart
(+94 files in other folders)
